--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,7 +9,7 @@
     Background="#FF2B3042">
 
     <Grid>
-        <Viewbox x:Name="LoginView" HorizontalAlignment="Center" Margin="0,0,0,0" Stretch="Fill" VerticalAlignment="Center" Height="700" Width="532" ScrollViewer.VerticalScrollBarVisibility="Visible">
+        <Viewbox x:Name="LoginView" HorizontalAlignment="Center" Margin="0,0,0,0" Stretch="Fill" VerticalAlignment="Center" Height="700" Width="532" ScrollViewer.VerticalScrollBarVisibility="Visible" KeyDown="LoginView_KeyDown">
             <Viewbox.FocusVisualPrimaryBrush>
                 <ImageBrush ImageSource="/Assets/6gr.png"/>
             </Viewbox.FocusVisualPrimaryBrush>
@@ -38,7 +38,7 @@
                     </Button.Background>
 
                 </Button>
-                <Button HorizontalAlignment="Center" Margin="0,270,0,0" Content="У меня чек" Background="{x:Null}" Foreground="#FF577FEA" >
+                <Button x:Name="CheckInButton" HorizontalAlignment="Center" Margin="0,270,0,0" Content="У меня чек" Background="{x:Null}" Foreground="#FF577FEA" Click="Button_Check" >
                     
                 </Button>
                 <TextBox Name="LoginTextBox" HorizontalAlignment="Center" Margin="0,250,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="319" Height="35" Background="{x:Null}" BorderBrush="#FF3F465F" Foreground="#FFDAF0F5" FontSize="18" TextAlignment="Left" Padding="8,4,0,0" UseLayoutRounding="True" PlaceholderText="Login"/>
@@ -46,7 +46,7 @@
 
             </Grid>
         </Viewbox>
-        <local1:PanelControl x:Name="MainPanel" />
+        <local1:PanelControl x:Name="MainPanel" Loaded="MainPanel_Loaded" />
 
 
 
