--- a/View/ProfileInfo.xaml
+++ b/View/ProfileInfo.xaml
@@ -11,11 +11,9 @@
     d:DesignWidth="1620">
 
     <Grid>
-        <Rectangle HorizontalAlignment="Left" Height="152" Margin="100,32,0,0" VerticalAlignment="Top" Width="152">
-            <Rectangle.Fill>
-                <ImageBrush ImageSource="/Assets/Group 564.png"/>
-            </Rectangle.Fill>
-        </Rectangle>
+        <Image Source="/Assets/Group 564.png" x:Name="ProfileImageRect" HorizontalAlignment="Left" Height="152" Margin="100,32,0,0" VerticalAlignment="Top" Width="152">
+
+        </Image>
         <Button Content="Загрузить новую" Margin="100,210,0,0" VerticalAlignment="Top" Width="152" Height="19" FontSize="9" Padding="8,1,8,3" HorizontalContentAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" FocusVisualPrimaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
         <Button Content="Удалить" Margin="100,229,0,0" VerticalAlignment="Top" Width="152" Height="19" FontSize="9" Padding="8,1,8,3" HorizontalContentAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF98A2A5"/>
         <TextBlock HorizontalAlignment="Left" Margin="439,32,0,0" Text="Логин" TextWrapping="Wrap" VerticalAlignment="Top" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
