--- a/View/NewsView.xaml
+++ b/View/NewsView.xaml
@@ -14,11 +14,9 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid HorizontalAlignment="Center" Margin="300,0,0,0">
-                        <Rectangle Width="500" Height="500" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,0,0" >
-                            <Rectangle.Fill>
-                                <ImageBrush ImageSource="/Assets/SplashScreen.scale-200.png"/>
-                            </Rectangle.Fill>
-                        </Rectangle>
+                        <MediaPlayerElement Source="{Binding SourceFile}" AutoPlay="True" Width="400" HorizontalAlignment="Left" VerticalAlignment="Center" Height="400">
+                            
+                        </MediaPlayerElement>
                         <TextBox Text="{Binding Text}" Width="500" Height="500" IsTapEnabled="False" IsReadOnly="True" IsHoldingEnabled="False" AllowFocusOnInteraction="False" Margin="550,0,0,0" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Background="#00000000" BorderBrush="#00000000" Foreground="#FFDAF0F5" />
                     </Grid>
                 </DataTemplate>
